micros/deployment-checkout.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: checkout
  name: checkout
spec:
  replicas: 15
  selector:
    matchLabels:
      run: checkout
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: checkout
    spec:
      containers:
      - image: docker.io/ewolff/microservice-kubernetes-demo-order:latest
        name: checkout
        ports:
        - containerPort: 8080
        resources: {}
status: {}
