micros/deployment2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: customer
    
  name: customer
spec:
  replicas: 2
  selector:
    matchLabels:
      run: customer
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: customer
    spec:
      containers:
      - image: docker.io/ewolff/microservice-kubernetes-demo-customer:latest
        name: customer
        ports:
        - containerPort: 8080
        resources: {}
status: {}
