micros/service-checkout.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: checkout
  name: checkout
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: checkout
  type: LoadBalancer
status:
  loadBalancer: {}
