micros/service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: apache
  name: apache
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: apache
  type: NodePort
  ports:
      nodePort: 30036
      name: http
status:
  loadBalancer: {}
