micros/ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micros
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /valette
        pathType: Prefix
        backend:
          service:
            name: apache
            port:
              number: 4200
      - path: /catalog
        pathType: Prefix
        backend:
          service:
            name: catalog
            port:
              number: 8080

      - path: /customer
        pathType: Prefix
        backend:
          service:
            name: customer
            port:
              number: 8081


      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order
            port:
              number: 8082

      - path: /my-service
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 8084
